--- a/Web/highscores.html
+++ b/Web/highscores.html
@@ -5,7 +5,7 @@
 	<title>NBA2K19 BadEdition</title>
 	<link rel="shortcut icon" type="image/png" href="./favicon.png"/>
 	<link rel="stylesheet" href="./style.css"> 
-	<script type="text/javascript" src="./database.json"></script>
+	<script type="text/javascript" src="./highscores.json"></script>
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet"/>
 </head>
 <body>
@@ -14,15 +14,15 @@
 	  	<a href="#default" ><img src="NBA_2K19_Logo.png" style="width: 50%; height: auto;" ></a>
 	  </div>	
 	  <div class="header-right">
-	  	<a  class="menus" href="index.html" >Statics</a>
-	  	<a  class="menus" href="highscores.html" >Highscores</a>
+	  	<a  class="menus" href="./index.html" >Statics</a>
+	  	<a  class="menus" href="./highscores.html" >Highscores</a>
 	  </div>
 	  
 	</div>
 	<div class="cuadro">
-		<h1 class="h1">Statistics of the last game</h1>	
+		<h1 class="h1">Highscores</h1>	
 		<div style="overflow-x:auto;"id="div1">
-			<script type="text/javascript" src="js.js"></script>
+			<script type="text/javascript" src="hs.js"></script>
 		</div>
 	</div>
 
