--- a/Web/highscores.html
+++ b/Web/highscores.html
@@ -16,6 +16,7 @@
 	  <div class="header-right">
 	  	<a  class="menus" href="./index.html" >Statics</a>
 	  	<a  class="menus" href="./highscores.html" >Highscores</a>
+	  	<a  class="menus" href="install.html" >Install</a>
 	  </div>
 	  
 	</div>
