--- a/libs/Web/highscores.html
+++ b/libs/Web/highscores.html
@@ -6,12 +6,13 @@
 	<link rel="shortcut icon" type="image/png" href="./favicon.png"/>
 	<link rel="stylesheet" href="./style.css"> 
 	<script type="text/javascript" src="./highscores.json"></script>
+	<script type="text/javascript" src="./images.json"></script>
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet"/>
 </head>
 <body>
 	<div class="header">
 	  <div class="logo">
-	  	<a href="#default" ><img src="NBA_2K19_Logo.png" style="width: 50%; height: auto;" ></a>
+	  	<a href="index.html" ><img src="NBA_2K19_Logo.png" style="width: 50%; height: auto;" ></a>
 	  </div>	
 	  <div class="header-right">
 	  	<a  class="menus" href="./index.html" >Statics</a>
